# a2a

./: pyproject.toml
src/a2a_fight/: __init__.py  judge.py  main.py  player.py
src/a2a_fight/google_agents/: google_player.py  interact_with_google_player.py
